upgrade shell to jdk17 and gradle 7.6/kotlin 1.8