@@ -1,14 +1,12 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '5.2.0' apply false
+    id 'com.github.johnrengelman.shadow' version '7.1.2' apply false
 }
 
-apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'net.corda.plugins.quasar-utils'
-apply plugin: 'net.corda.plugins.publish-utils'
-apply plugin: 'com.jfrog.artifactory'
-apply plugin: 'maven-publish'
+apply plugin: 'corda.common-publishing'
 
 // We need to set mainClassName before applying the shadow plugin.
 mainClassName = 'net.corda.tools.shell.standalone.StandaloneShellKt'
@@ -18,7 +16,7 @@ description 'Corda Shell'
 
 configurations {
     cordaShellDependencies {}
-    integrationTestCompile.extendsFrom testCompile
+    integrationTestImplementation.extendsFrom testImplementation
     integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
 }
 
@@ -36,54 +34,84 @@ sourceSets {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
 
-    compile "$cordaReleaseGroup:corda-node-api:$cordaReleaseVersion"
-    compile "$cordaReleaseGroup:corda-rpc:$cordaReleaseVersion"
-    compile "$cordaReleaseGroup:corda-tools-cliutils:$cordaReleaseVersion"
-    compile "$cordaReleaseGroup:corda-common-logging:$cordaReleaseVersion"
+    implementation "$cordaReleaseGroup:corda-core:$cordaReleaseVersion"
+    implementation "$cordaReleaseGroup:corda-node-api:$cordaReleaseVersion"
+
+    implementation "$cordaReleaseGroup:corda-rpc:$cordaReleaseVersion"
+    implementation "$cordaReleaseGroup:corda-tools-cliutils:$cordaReleaseVersion"
+    implementation "$cordaReleaseGroup:corda-common-logging:$cordaReleaseVersion"
+    implementation "$cordaReleaseGroup:corda-common-configuration-parsing:$cordaReleaseVersion"
+
+    implementation "io.reactivex:rxjava:$rxjavaVersion"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
+    implementation "info.picocli:picocli:$picocliVersion"
+    implementation "com.typesafe:config:$typesafeConfigVersion"
+    implementation "com.google.guava:guava:$guavaVersion"
+    implementation "org.apache.commons:commons-lang3:$commonsLang3Version"
+    implementation "com.github.ben-manes.caffeine:caffeine:$caffeineVersion"
+    implementation "org.apache.activemq:artemis-commons:$artemisVersion"
 
     // Jackson support: serialisation to/from JSON, YAML, etc.
-    compile "$cordaReleaseGroup:corda-jackson:$cordaReleaseVersion"
+    implementation "$cordaReleaseGroup:corda-jackson:$cordaReleaseVersion"
+
+    // Bouncy castle support needed for X509 certificate manipulation
+    testImplementation "org.bouncycastle:bcprov-debug-jdk18on:${bouncycastleVersion}"
+    testImplementation "org.bouncycastle:bcpkix-debug-jdk18on:${bouncycastleVersion}"
+
+    testImplementation "co.paralleluniverse:quasar-core:$quasar_version"
 
     // CRaSH: An embeddable monitoring and admin shell with support for adding new commands written in Groovy.
-    compile("org.crashub:crash.shell:$crashVersion") {
+    implementation("org.crashub:crash.shell:$crashVersion") {
         exclude group: "org.slf4j", module: "slf4j-jdk14"
         exclude group: "org.bouncycastle"
     }
 
-    compile("org.crashub:crash.connectors.ssh:$crashVersion") {
+    implementation("org.crashub:crash.cli:$crashVersion") {
         exclude group: "org.slf4j", module: "slf4j-jdk14"
         exclude group: "org.bouncycastle"
     }
+
+    implementation("org.crashub:crash.connectors.ssh:$crashVersion") {
+        exclude group: "org.slf4j", module: "slf4j-jdk14"
+        exclude group: "org.bouncycastle"
+    }
+
 
     // JAnsi: for drawing things to the terminal in nicely coloured ways.
-    compile "org.fusesource.jansi:jansi:$jansiVersion"
+    implementation "org.fusesource.jansi:jansi:$jansiVersion"
 
     // Manifests: for reading stuff from the manifest file.
-    compile "com.jcabi:jcabi-manifests:1.1"
+    implementation "com.jcabi:jcabi-manifests:1.1"
 
     // For logging, required for ANSIProgressRenderer.
-    compile "org.apache.logging.log4j:log4j-core:$log4jVersion"
-    compile "org.slf4j:jul-to-slf4j:$slf4jVersion"
+    implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
+    implementation "org.slf4j:jul-to-slf4j:$slf4jVersion"
+
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
 
     testImplementation "junit:junit:$junitVersion"
-
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junitVintageVersion"
     testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junitPlatformVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
 
     // Unit testing helpers.
-    testCompile "org.assertj:assertj-core:$assertJVersion"
-    testCompile "$cordaReleaseGroup:corda-test-utils:$cordaReleaseVersion"
+    testImplementation "org.assertj:assertj-core:$assertJVersion"
+    testImplementation "$cordaReleaseGroup:corda-node:$cordaReleaseVersion"
+    testImplementation "$cordaReleaseGroup:corda-core-test-utils:$cordaReleaseVersion"
+    testImplementation "$cordaReleaseGroup:corda-test-utils:$cordaReleaseVersion"
+    testImplementation "$cordaReleaseGroup:corda-jackson:$cordaReleaseVersion"
+    testImplementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion"
 
     // Jsh: Testing SSH server.
-    integrationTestCompile "com.jcraft:jsch:$jschVersion"
+    integrationTestImplementation "com.jcraft:jsch:$jschVersion"
 
-    integrationTestCompile "$cordaReleaseGroup:corda-node-driver:$cordaReleaseVersion"
+    integrationTestImplementation "$cordaReleaseGroup:corda-node-driver:$cordaReleaseVersion"
 
-    testCompile "com.nhaarman:mockito-kotlin:$mockitoKotlinVersion"
-    testCompile "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:$mockitoKotlinVersion"
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation 'com.github.bft-smart:library:master-v1.1-beta-g6215ec8-87'
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -116,13 +144,28 @@ processResources {
     from file("./resources/log4j2.xml")
 }
 
-artifacts {
-    archives shadowJar
-    publish shadowJar
+test {
+    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
 }
 
-publish {
-    dependenciesFrom configurations.cordaShellDependencies
-    name shadowJar.archiveBaseName
-    disableDefaultJar = true
+integrationTest {
+    jvmArgs += [
+            '--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+    ]
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            artifactId 'corda-shell'
+            artifact(shadowJar) {
+            }
+        }
+    }
 }
